# stdfs_wrapper

./: CMakeLists.txt  README.md  fmstream.sln  fmstream.vcxproj  fmstream.vcxproj.filters
dependencies/include/: SingletonThreadPool.h  ThreadPool.h
src/: FileManager.cpp  FileManager.h  ForwardDeclaration.h
src/exceptions/: BaseException.cpp  BaseException.h  FileDoesNotExistException.cpp  FileDoesNotExistException.h  NotAFileException.cpp  NotAFileException.h
src/handles/: AppendBinaryFileHandle.cpp  AppendFileHandle.cpp  FileHandle.cpp  ReadBinaryFileHandle.cpp  ReadFileHandle.cpp  WriteFileHandle.cpp
x64/Debug/: fmstream.exe.recipe  fmstream.ilk  fmstream.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/fmstream.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fmstream.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
